Fixed responsive layout and overflow issue perfecto

--- a/static/barber/css/styling.css
+++ b/static/barber/css/styling.css
@@ -1,3 +1,11 @@
+
+/* removed the white space in homepage */
+html, body {
+  overflow-x: hidden;
+}
+
+
+
 /* sliding pics to fit in mobile screen*/
 
 .about-container {
